--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,8 @@
 {% set name = "siesta" %}
-{% set siesta_version = "5.0.0-beta1" %}
+{% set siesta_version = "5.0.0-beta2" %}
 # This changes the X.Y.Z-betaW to X.Y.ZrcW
-{% set version = "rc".join(siesta_version.replace("beta", "b").split("-b")) %}
-{% set sha256 = "fdc03d224b07c55cfad629958901e7008bc3a1973c3ee7749bc2310671f49ac2" %}
+{% set version = siesta_version.replace("-beta", "b") %}
+{% set sha256 = "679c28fc5bd6416782cf3a9ad08bdfce85e0aa85703fd8fef7b12213530cceb7" %}
 
 package:
   name: {{ name }}
@@ -12,11 +12,9 @@ source:
   fn: {{ name }}-{{ siesta_version }}.tar.gz
   url: https://gitlab.com/siesta-project/siesta/-/releases/{{ siesta_version }}/downloads/siesta-{{ siesta_version }}.tar.gz
   sha256: {{ sha256 }}
-  patches:
-    - patches/include_lua.patch
 
 # Default build version to be stepped with every new build!
-{% set build = 2 %}
+{% set build = 0 %}
 
 # Define build matrix for MPI vs. non-mpi
 ## ensure mpi is defined (needed for conda-smithy recipe-lint)
@@ -77,7 +75,7 @@ test:
 
 about:
   home: https://gitlab.com/siesta-project
-  license: GPL-3.0-or-later
+  license: GPL-3.0-only
   license_family: GPL
   license_file: COPYING
   summary: A first-principles materials simulation code using DFT
