--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,8 @@
 {% set name = "siesta" %}
-{% set siesta_version = "5.0.0-beta1" %}
+{% set siesta_version = "5.0.0-beta2" %}
 # This changes the X.Y.Z-betaW to X.Y.ZrcW
-{% set version = "rc".join(siesta_version.replace("beta", "b").split("-b")) %}
-{% set sha256 = "fdc03d224b07c55cfad629958901e7008bc3a1973c3ee7749bc2310671f49ac2" %}
+{% set version = siesta_version.replace("-beta", "b") %}
+{% set sha256 = "679c28fc5bd6416782cf3a9ad08bdfce85e0aa85703fd8fef7b12213530cceb7" %}
 
 package:
   name: {{ name }}
@@ -12,11 +12,9 @@ source:
   fn: {{ name }}-{{ siesta_version }}.tar.gz
   url: https://gitlab.com/siesta-project/siesta/-/releases/{{ siesta_version }}/downloads/siesta-{{ siesta_version }}.tar.gz
   sha256: {{ sha256 }}
-  patches:
-    - patches/include_lua.patch
 
 # Default build version to be stepped with every new build!
-{% set build = 2 %}
+{% set build = 0 %}
 
 # Define build matrix for MPI vs. non-mpi
 ## ensure mpi is defined (needed for conda-smithy recipe-lint)
@@ -40,12 +38,17 @@ build:
 
 requirements:
   build:
+    - {{ stdlib('c') }}
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
     - make  # [not win]
     - git
     - cmake
     - pkg-config
+    # Only for tests:
+    - openssh
+    - python
+    - ruamel.yaml
   host:
     - libblas
     - liblapack
@@ -71,13 +74,10 @@ requirements:
     - netcdf-fortran * {{ mpi_prefix }}_*
     - lua
     - elpa * {{ mpi_prefix }}_*  # [mpi != 'nompi']
-test:
-  source_files:
-    - Tests/**
 
 about:
   home: https://gitlab.com/siesta-project
-  license: GPL-3.0-or-later
+  license: GPL-3.0-only
   license_family: GPL
   license_file: COPYING
   summary: A first-principles materials simulation code using DFT
@@ -91,6 +91,7 @@ about:
     that its accuracy and cost can be tuned in a wide range, from quick
     exploratory calculations to highly accurate simulations matching the
     quality of other approaches, such as plane-wave and all-electron methods.
+  doc_url: https://docs.siesta-project.org/projects/siesta/en/latest/
   dev_url: https://gitlab.com/siesta-project/siesta
 
 extra:
