OSX_arm64 support (#53)
* migration: OSXArm

Disabling D3 for cross compiling to avoid test-drive

Remove march=native from c flags

* MNT: Re-rendered with conda-build 24.5.0, conda-smithy 3.35.1, and conda-forge-pinning 2024.05.13.13.50.55

* removed ELPA from Mac cross compilation

---------

Signed-off-by: zerothi <nickpapior@gmail.com>
Co-authored-by: regro-cf-autotick-bot <36490558+regro-cf-autotick-bot@users.noreply.github.com>
Co-authored-by: zerothi <nickpapior@gmail.com>
Co-authored-by: conda-forge-webservices[bot] <91080706+conda-forge-webservices[bot]@users.noreply.github.com>

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,14 +1,14 @@
+bot:
+  abi_migration_branches:
+  - main
+build_platform:
+  osx_arm64: osx_64
+conda_build:
+  pkg_format: '2'
 conda_forge_output_validation: true
-#build_platform:
-#  osx_arm64: osx_64
 test: native_and_emulated
 github:
   branch_name: main
   tooling_branch_name: main
 conda_build:
   pkg_format: '2'
-bot:
-  abi_migration_branches:
-  - main
-  - v4.1.x
-    # no v4.0.x
