--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,9 +12,11 @@ source:
   fn: {{ name }}-{{ siesta_version }}.tar.gz
   url: https://gitlab.com/siesta-project/siesta/-/releases/{{ siesta_version }}/downloads/siesta-{{ siesta_version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    - patches/mpi_interfaces_crosscomp.patch
 
 # Default build version to be stepped with every new build!
-{% set build = 0 %}
+{% set build = 1 %}
 
 # Define build matrix for MPI vs. non-mpi
 ## ensure mpi is defined (needed for conda-smithy recipe-lint)
@@ -33,8 +35,9 @@ source:
 build:
   number: {{ build }}
   skip: true  # [win]
-
+  #skip: true  # [mpi != 'nompi' and osx and arm64]
   string: "{{ mpi_prefix }}_h{{ PKG_HASH }}_{{ build }}"
+
 
 requirements:
   build:
@@ -44,7 +47,12 @@ requirements:
     - make  # [not win]
     - git
     - cmake
+    - llvm-openmp  # [osx]
+    - libgomp  # [linux]
     - pkg-config
+    # Courtesy of DFTB+ feedstock:
+    # OpenMPI-framework is not found otherwise when cross compiling for osx_arm64
+    - {{ mpi }}  # [mpi == "openmpi" and (osx and arm64)]
     # Only for tests:
     - openssh
     - python
@@ -64,7 +72,7 @@ requirements:
     - netcdf-fortran
     - netcdf-fortran * {{ mpi_prefix }}_*
     - lua
-    - elpa * {{ mpi_prefix }}_*  # [mpi != 'nompi']
+    - elpa * {{ mpi_prefix }}_*  # [mpi != 'nompi' and not (osx and arm64)]
   run:
     - {{ mpi }}  # [mpi != 'nompi']
     - scalapack  # [mpi != 'nompi']
@@ -73,7 +81,7 @@ requirements:
     - libnetcdf * {{ mpi_prefix }}_*
     - netcdf-fortran * {{ mpi_prefix }}_*
     - lua
-    - elpa * {{ mpi_prefix }}_*  # [mpi != 'nompi']
+    - elpa * {{ mpi_prefix }}_*  # [mpi != 'nompi' and not (osx and arm64)]
 
 about:
   home: https://gitlab.com/siesta-project
