--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -84,7 +84,7 @@ requirements:
     - elpa * {{ mpi_prefix }}_*  # [mpi != 'nompi' and not (osx and arm64)]
 
 about:
-  home: https://gitlab.com/siesta-project
+  home: https://siesta-project.org/siesta/
   license: GPL-3.0-only
   license_family: GPL
   license_file: COPYING
@@ -99,8 +99,8 @@ about:
     that its accuracy and cost can be tuned in a wide range, from quick
     exploratory calculations to highly accurate simulations matching the
     quality of other approaches, such as plane-wave and all-electron methods.
-  doc_url: https://docs.siesta-project.org/projects/siesta/en/latest/
-  dev_url: https://gitlab.com/siesta-project/siesta
+  doc_url: https://docs.siesta-project.org/projects/siesta/
+  dev_url: https://gitlab.com/siesta-project/siesta/
 
 extra:
   recipe-maintainers:
