--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,11 +35,8 @@ build:
   skip: true  # [win]
   #skip: true  # [mpi != 'nompi' and osx and arm64]
   string: "{{ mpi_prefix }}_h{{ PKG_HASH }}_{{ build }}"
-  ignore_prefix_files:
-    - '**/version-info.inc'
-    - '**/siesta_version_info.F90'
-    - '**/siesta_version_info.o'
-    - '**/configured_values_m.F90'
+  patches:
+    - patches/add-conda.patch
 
 
 requirements:
