--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
   sha256: {{ sha256 }}
 
 # Default build version to be stepped with every new build!
-{% set build = 0 %}
+{% set build = 1 %}
 
 # Define build matrix for MPI vs. non-mpi
 ## ensure mpi is defined (needed for conda-smithy recipe-lint)
@@ -70,7 +70,7 @@ requirements:
     - netcdf-fortran
     - netcdf-fortran * {{ mpi_prefix }}_*
     - lua
-    - elpa * {{ mpi_prefix }}_*  # [mpi != 'nompi' and not (osx and arm64)]
+    - elpa * {{ mpi_prefix }}_*  # [not (osx and arm64)]
   run:
     - {{ mpi }}  # [mpi != 'nompi']
     - scalapack  # [mpi != 'nompi']
@@ -79,7 +79,7 @@ requirements:
     - libnetcdf * {{ mpi_prefix }}_*
     - netcdf-fortran * {{ mpi_prefix }}_*
     - lua
-    - elpa * {{ mpi_prefix }}_*  # [mpi != 'nompi' and not (osx and arm64)]
+    - elpa * {{ mpi_prefix }}_*  # [not (osx and arm64)]
 
 about:
   home: https://siesta-project.org/siesta/
