--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,8 @@
 {% set name = "siesta" %}
-{% set siesta_version = "5.2.0" %}
+{% set siesta_version = "5.2.1" %}
 # This changes the X.Y.Z-betaW to X.Y.ZrcW
 {% set version = siesta_version.replace("-beta", "b") %}
-{% set sha256 = "54a1a16bfeed0f03b5b46524cca1b4c821ef333321592f1876658f73f2b91453" %}
+{% set sha256 = "9548010073662fde9be5e5fd983647cc750ec424106210c3a19b0f354053abd4"
 
 package:
   name: {{ name }}
@@ -12,11 +12,9 @@ source:
   fn: {{ name }}-{{ siesta_version }}.tar.gz
   url: https://gitlab.com/siesta-project/siesta/-/releases/{{ siesta_version }}/downloads/siesta-{{ siesta_version }}.tar.gz
   sha256: {{ sha256 }}
-  patches:
-    - patches/425_moremeshsubs.patch
 
 # Default build version to be stepped with every new build!
-{% set build = 3 %}
+{% set build = 0 %}
 
 # Define build matrix for MPI vs. non-mpi
 ## ensure mpi is defined (needed for conda-smithy recipe-lint)
